objects/Astonous_SM__Scheduled_Pickup_Request__c.object
<CustomObject>
    <description>To store scheduled pickup requests</description>
    <fields>
        <fullName>Astonous_SM__Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Building_Location__c</fullName>
        <label>Building Location</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FRONT</fullName>
                </value>
                <value>
                    <fullName>REAR</fullName>
                </value>
                <value>
                    <fullName>SIDE</fullName>
                </value>
                <value>
                    <fullName>Back Door</fullName>
                </value>
                <value>
                    <fullName>Side Door</fullName>
                </value>
                <value>
                    <fullName>Knock on Door/Ring Bell</fullName>
                </value>
                <value>
                    <fullName>Mail Room</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Reception</fullName>
                </value>
                <value>
                    <fullName>In/At Mailbox</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                    <isActive>false</isActive>
                    <label>NONE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Building_Type__c</fullName>
        <label>Building Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APARTMENT</fullName>
                </value>
                <value>
                    <fullName>BUILDING</fullName>
                </value>
                <value>
                    <fullName>DEPARTMENT</fullName>
                </value>
                <value>
                    <fullName>SUITE</fullName>
                </value>
                <value>
                    <fullName>FLOOR</fullName>
                </value>
                <value>
                    <fullName>ROOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Carrier_Code__c</fullName>
        <label>Carrier Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Container_Type__c</fullName>
        <label>Container Type/ Larget Item</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>PACKAGE</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>UPS LETTER</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>PALLET</label>
                </value>
                <value>
                    <fullName>LESA</fullName>
                    <label>Letter / Satchel</label>
                </value>
                <value>
                    <fullName>BXCA</fullName>
                    <label>Box / Carton</label>
                </value>
                <value>
                    <fullName>SKID</fullName>
                    <label>Skid</label>
                </value>
                <value>
                    <fullName>JIFB</fullName>
                    <label>Jiffy Bag</label>
                </value>
                <value>
                    <fullName>Tube</fullName>
                </value>
                <value>
                    <fullName>CRAT</fullName>
                    <label>Crate</label>
                </value>
                <value>
                    <fullName>LENG</fullName>
                    <label>Length</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>New Option</fullName>
                    <isActive>false</isActive>
                    <label>New Option</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Destination_Country__c</fullName>
        <label>Destination Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <label>United States</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                    <label>Canada</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Dispatch_Location__c</fullName>
        <description>The location information for the Carrier station handling the dispatch.</description>
        <inlineHelpText>The location information for the Carrier station handling the dispatch.</inlineHelpText>
        <label>Dispatch Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__LastAccessTime__c</fullName>
        <label>Last Access Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__PRP_Control_Number__c</fullName>
        <inlineHelpText>Fedex Package Return Program control number</inlineHelpText>
        <label>PRP Control Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Scheduled_On__c</fullName>
        <label>Scheduled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FDXE</fullName>
                    <label>FDXE (Express)</label>
                </value>
                <value>
                    <fullName>FDXC</fullName>
                    <label>FDXC(Cargo)</label>
                </value>
                <value>
                    <fullName>FDXG</fullName>
                    <label>FDXG (Ground)</label>
                </value>
                <value>
                    <fullName>PriorityMailExpress</fullName>
                    <label>Priority Mail Express</label>
                </value>
                <value>
                    <fullName>PriorityMail</fullName>
                    <label>Priority Mail</label>
                </value>
                <value>
                    <fullName>ExpressMail</fullName>
                </value>
                <value>
                    <fullName>FirstClass</fullName>
                </value>
                <value>
                    <fullName>Returns</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>001</fullName>
                    <label>UPS Next Day Air</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>UPS 2nd Day Air</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>UPS Ground</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>UPS Ground, UPS Standard</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>UPS Worldwide Express</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>UPS Worldwide Expedited</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>UPS Standard</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>UPS 3 Day Select</label>
                </value>
                <value>
                    <fullName>013</fullName>
                    <label>UPS Next Day Air Saver</label>
                </value>
                <value>
                    <fullName>014</fullName>
                    <label>UPS Next Day Air Early</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>UPS Economy</label>
                </value>
                <value>
                    <fullName>031</fullName>
                    <label>UPS Basic</label>
                </value>
                <value>
                    <fullName>054</fullName>
                    <label>UPS Worldwide Express Plus</label>
                </value>
                <value>
                    <fullName>059</fullName>
                    <label>UPS 2nd Day Air A.M.</label>
                </value>
                <value>
                    <fullName>064</fullName>
                    <label>UPS Express NA1</label>
                </value>
                <value>
                    <fullName>065</fullName>
                    <label>UPS Saver</label>
                </value>
                <value>
                    <fullName>071</fullName>
                    <label>UPS Worldwide Express Freight Midday</label>
                </value>
                <value>
                    <fullName>074</fullName>
                    <label>UPS Express 12:00</label>
                </value>
                <value>
                    <fullName>082</fullName>
                    <label>UPS Standard Today</label>
                </value>
                <value>
                    <fullName>083</fullName>
                    <label>UPS Today Dedicated Courier</label>
                </value>
                <value>
                    <fullName>084</fullName>
                    <label>UPS Intercity Today</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Shipping_Carrier__c</fullName>
        <label>Shipping Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Astonous_SM__Shipping_Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Show_Shipments__c</fullName>
        <description>Hidden field to control if Pickup Wizard should list all Shipments</description>
        <label>Show Shipments</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Astonous_SM__Shipping_Carrier__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Astonous_SM__Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__SuiteOrApt__c</fullName>
        <label>SuiteOrApt</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Astonous_SM__Weight_Unit__c</fullName>
        <label>Weight Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LB</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Scheduled Pickup Request</label>
    <listViews>
        <fullName>Astonous_SM__All</fullName>
        <columns>NAME</columns>
        <columns>Astonous_SM__Confirmation_Number__c</columns>
        <columns>Astonous_SM__Scheduled_On__c</columns>
        <columns>Astonous_SM__Address__c</columns>
        <columns>Astonous_SM__Carrier_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Scheduled Pickup Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Pickup Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>